kubernetes/apps/monitor/kubernetes-dashboard/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: monitor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "kdash.${SECRET_DOMAIN}"
    gethomepage.dev/app: "kubernetes-dashboard-web"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Kubernetes dashboard"
    gethomepage.dev/description: "A web-based Kubernetes user interface"
    gethomepage.dev/href: "https://kdash.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/icon: "si-kubernetes"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`kdash.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: kubernetes-dashboard-kong-proxy
          port: 443

  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
